- Before moving, doors will now check if the owner is allowed to break the blocks in the old location as well (not just the new location).
- When a door exceeds either the personal door size limit of the owner or player that activated the door, or the global limit, it cannot be toggled anymore. (it used to only skip the animiation).
- Removed the "bigdoors.admin.ignoreownership" permission node. This is replaced by the new node: "bigdoors.admin.bypass.<attribute>". The attributes are: "lock", "toggle", "info", "delete", "relocatepowerblock", "changetime", "blockstomove", "direction", "addowner", and "removeowner"
- Fixed error thrown by TimedCache. Thanks, @Sneaky_42 for the bug report!
- Added material blacklist to the config.
- Fixed GUI buttons in 1.11. Thanks, @HakanUnsalP for the bug report!

Alpha 0.1.8.12
- Fixed sounds being played asynchronously, which Spigot didn't like. Thanks, @DeathReminds for the bug report!

Alpha 0.1.8.11
- Fixed InsufficientFunds message appearing even if the price is just 0. Thanks, @0fficerMike for the bug report!
- Added project URL to update available message received on login. Thanks, @Panda_Nesthesia for the suggestion.
- Fixed "/DoorInfo <doorName>" only working if you provided a doorUID.
- Fixed doors potentially getting corrupted when toggling power blocks in rapid succession, specifically at medium TPS. Thanks, @Ashh for the bug report and being so patient!
- ChunkUnloadEvent now also compares worlds before aborting door movement. Thanks, @IkHeetRemco_ for the bug report!
- Fixed error on player join when trying to send a resource pack to a player that was not allowed to join. Thanks, @Relaxing for the bug report!
- Added configurable timeout value for commands and raised default timeout to 40 seconds for commands and 120 for door creation. Thanks, @ToBugs for the suggestion.
- Fixed lack of error message when trying to open a door you do not own via command if the invalid door was the first argument.