@@ -55,7 +55,7 @@ public class Messages
                 String[] parts = sCurrentLine.split("=", 2);
                 key    = parts[0];
                 value  = parts[1].replaceAll("&((?i)[0-9a-fk-or])", "\u00A7$1");
-                String[] newLineSplitter = value.split("\\\\n"); // Wut? Can I haz more backslash?
+                String[] newLineSplitter = value.split("\\\\n");
 
                 String values = newLineSplitter[0];
 
