@@ -64,16 +64,16 @@ GUI.ToggleDoor=Toggle Door
 GUI.MoreInfo=Get more info about this door.
 GUI.GetInfo=Get Door Info
 GUI.RelocatePowerBlock=Relocate Power Block.
-GUI.RelocatePowerBlockLore=Relocate the power block position for this door.
-GUI.DeleteDoorLong=Delete this door. Be careful, this cannot be undone!
+GUI.RelocatePowerBlockLore=Relocates the location of\nthis door's power block.
+GUI.DeleteDoorLong=Deletes this door.\nBe careful, this cannot be undone!
 GUI.DeleteDoor=Delete Door
-GUI.ConfirmDelete=Yes, I am absolutely sure I want to delete this door!
+GUI.ConfirmDelete=Yes, I am absolutely sure\nI want to delete this door!
 GUI.Confirm=YES, I am certain
 GUI.NotConfirm=NO! I don't want to delete this door!
 GUI.No=NO!
-GUI.BLOCKSTOMOVE.Name=Change the number of blocks this door will try to move.
-GUI.BLOCKSTOMOVE.Available=Number of blocks this door will try to move:
-GUI.BLOCKSTOMOVE.Unavailable=This door will try to move as many blocks as it is long or high.
+GUI.BLOCKSTOMOVE.Name=Change the number of blocks\nthis door will try to move.
+GUI.BLOCKSTOMOVE.Available=Number of blocks this door\nwill try to move:
+GUI.BLOCKSTOMOVE.Unavailable=This door will try to move as many\nblocks as it is long or high.
 GUI.Direction.Name=Change opening direction.
 GUI.Direction.ThisDoorOpens=This door opens in 
 GUI.Direction.ThisDoorGoes=This door goes 
@@ -89,7 +89,7 @@ GUI.Direction.Down=Down
 GUI.Direction.Up=Up
 GUI.ChangeTimer=Set door auto close timer.
 GUI.ChangeTimerLore=This door automatically closes after 
-GUI.ChangeTimerLoreDisabled=This door is not set to close automatically.
+GUI.ChangeTimerLoreDisabled=This door is not set\nto close automatically.
 GUI.ADDOWNER=Add another owner for this door.
 GUI.REMOVEOWNER=Remove another owner of this door.
 COMMAND.TimeOutOrFail=&cTimed out waiting for input or input was incorrect! Try again!
